Fixed text wrapping issue with primary Stops & Trails lists
Fixed the text wrapping issue with primary Stops & Trails lists, however, the details pages are still suffering from the same problem.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,3 +38,7 @@ h2 , h3{
 a{
   font-size: 140%;
 }
+.wrap-text {
+  -ms-word-wrap: break-word;
+  word-wrap: break-word;
+}
